styles/style.css
.hero {
	position: relative;
	width: 100vw;
	height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero::before {
    content: "";
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background: url(../images/background.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    /* filter: brightness(60%); */
}

.hero-content {
    position: relative;
    /* top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); */
    text-align: center;
}

.hero-title {
    font-size: 3rem;
    font-weight: 600;
    margin-bottom: 0;
    color: white;
}

.hero-subtitle {
    font-size: 2rem;
    font-weight: 200;
    margin-top: 1rem;
    color: white;
}

